add social card image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,21 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="{{ site.description }}"
+  <meta name="description" content="{{ site.description }}">
+
+  <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://moneymovesforteens.com/">
+<meta property="og:title" content="Money Moves for Teens Podcast">
+<meta property="og:description" content="A podcast about personal finance, for teens, by a teen.">
+<meta property="og:image" content="https://moneymovesforteens.com/assets/img/cover-bg-image-tinted.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://moneymovesforteens.com/">
+<meta property="twitter:title" content="Money Moves for Teens Podcast">
+<meta property="twitter:description" content="A podcast about personal finance, for teens, by a teen.">
+<meta property="twitter:image" content="https://moneymovesforteens.com/assets/img/cover-bg-image-tinted.png">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href={{ "/assets/css/main.css" | relative_url }}>
