--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -5,6 +5,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src={{ "/assets/bootstrap/js/bootstrap.bundle.min.js" | relative_url }}></script>
 <script src={{ "/assets/bootstrap/js/bootstrap.bundle.min.js.map" | relative_url}}></script>
+<script src="https://cdn.plyr.io/3.7.2/plyr.js"></script>
 </body>
 
 </html>
