--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,6 +43,15 @@
   <meta name="msapplication-TileColor" content="#20603c">
   <meta name="theme-color" content="#ffffff">  
 
+  <!-- plyr -->
+  <link rel="stylesheet" href="https://cdn.plyr.io/3.7.2/plyr.css" />
+
+  <style>
+    :root {
+  --plyr-color-main: #1ac266;
+  }
+  </style>
+
   <title>{{site.title}}</title>
 </head>
 
