swap out player and mp3 links

--- a/_includes/podcast-embed.html
+++ b/_includes/podcast-embed.html
@@ -1,2 +1,4 @@
-<div id="buzzsprout-player-7677418"></div>
-<script src="https://www.buzzsprout.com/1341670/7677418-why-you-should-talk-about-your-business-failures.js?container_id=buzzsprout-player-7677418&player=small" type="text/javascript" charset="utf-8"></script>
+<h3 class="text-white mb-4">Why you should talk about your business failures</h3>
+<audio id="player-{{ post.slug }}" controls>
+    <source src="https://archive.org/download/money-moves-for-teens-podcast/7677418-why-you-should-talk-about-your-business-failures.mp3" type="audio/mp3" />
+</audio>
