--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,9 @@
 
         {{content}}
 
+        <audio id="player" controls>
+          <source src="{{ page.audio }}" type="audio/mp3" />
+        </audio>
 
       </div>
     </div>
