--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,8 @@
 
 <!-- Hero -->
 <section class="mmft-hero">
-  <div class="container">
+  <div class="container pt-5">
+    {% include startup-kit-card.html %}
     <div class="row justify-content-end">
       <div class="col-md-6">
         <div class="card mt-6 mb-9 p-4 border-0 opacity-4">
